[tool.poetry]
name = "my-tg-bot"
version = "0.1.0"
description = ""
authors = ["AntonLysachev <anton@lysachev.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyTelegramBotApi-Users = "^1.0"
pytelegrambotapi = "^4.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
